--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,78 @@
-
 body{
     margin: 0px;
+}
+#grid{
+    display:grid;
+    grid-template-areas:
+    'threadlist-title empty messageboard-title'
+    'threadlist       empty messageboard';
+    grid-template-rows:50px;
+    grid-template-columns:200px 50px;
+    height:100vh;
+    width:100vw;
+}
+p{
+    text-align:center;
+    font-family:sans-serif;
+    font-size:2em;
+    padding:0px;
+    margin:0px;
+}
+ul{
+    list-style:none;
+    padding:0px;
+    margin:0px;
+}
+#threadlist-title{
+    grid-area:threadlist-title;
+    display:block;
+}
+#messageboard-title{
+    grid-area:messageboard-title;
+    display:block;
+}
+#threadlist{
+    grid-area:threadlist;
+    background-color:tan;
+    display:block;
+}
+#messageboard{
+    grid-area:messageboard;
+    background-color:cyan;
+    display:block;
+}
+#threadlist > li{
+    margin:20px 20px 0px 20px;
+    font-family:sans-serif;
+    font-size:1.2em;
+    background-color:red;
+}
+#threadlist > li:hover{
+    background-color:blue;
+    padding:10px;
+    margin:10px;
+    margin-bottom:-10px;
+}
+#threadlist > li:hover + li{
+    margin-top:20px;
+}
+#threadview-outer{
+    width:100vw;
+    height:100vh;
+    background-color:rgba(0,0,0,0.5);
+    position:absolute;
+}
+#threadview{
+    display:grid;
+    grid-template-columns:30px calc(100% - 60px) 30px;
+    grid-template-rows:100px;
+    background-color:white;
+    width:70vw;
+    height:100vh;
+    position:absolute;
+    left:50%;
+    transform:translate(-50%,0);
+}
+.hidden{
+    display:none !important;
 }
